--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@ The expression <i>educational</i> is to be understood according to its broad mea
                 <p>[Old Project idea] <a href="http://mma.xmr.biz">Monero Missives Archive</a> -&nbsp;Concept: A dedicated website, as central archive for all releases of <i style="line-height: 1.5;">Monday Monero Missives</i>. Missives are the weekly, official newsletters, written by the Monero core team. (Possible features: topic index on all articles, useful additional meta data, different formats and quality, search, related material, statistics, community contributions, translations, ...)<br></p>
                 <p><a href="http://getmonero.org/" style="color: rgb(0, 102, 153); text-decoration: none; font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 15px; line-height: 22.5px; background-color: rgb(222, 222, 222);"></a></p>
                  
-                <h2>Contact and Authors</h2>
+                <h2>Contact & Authors</h2>
                 <p>Request changes, got a question or want to supply additional informations? Send an email to <a href="mailto:admin@xmr.biz">admin@xmr.biz</a>&nbsp;or find us on <i>#monero-dev</i> on the <a href="https://freenode.net/">Freenode IRC network</a>. We are happy to help you.</p>
-                                <p>This site is managed by <a href="http://xmr.biz">xmr.biz Networks</a>.</p>
-
-                <p>Thank you to the following members of the community, for their contributions: <br>David Latapie, fluffypony, triplef, sammy007 and jwinterm.</p>
+                                <p>This site is managed by <a href="http://xmr.biz">xmr.biz Networks</a>.
+Thank you to the following members of the community, for their contributions: <br>David Latapie, fluffypony, triplef, sammy007 and jwinterm.</p>
                 
             </section>
         </div>
