--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <section id="main_content">
                 <h3></h3>
                 <h2>About xmr.biz</h2>
-                <p>Welcome to our Unofficial Monero Community Resources. This site is a independent community member project.<br>We hope to offer useful services for the Monero community and project. Which are a encouraging an efficient knowledge management. That is creating synergies for development and is avoiding common inefficiencies of Free Software Projects (duplicative work, knowledge gaps, etc.).</p>
+                <p>Welcome to our xmr.biz - Monero Community Resources. This site is a independent community member project.<br>We hope to offer useful services for the Monero community and project. Which are a encouraging an efficient knowledge management. That is creating synergies for development and is avoiding common inefficiencies of Free Software Projects (duplicative work, knowledge gaps, etc.).</p>
                 <h2>Projects</h2>
                
                 <p><b>commons.xmr.biz - Monero Commons Repository</b></p>
