--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <section id="main_content">
                 <h3></h3>
                 <h2>About xmr.biz</h2>
-                <p>Welcome to our xmr.biz - Monero Community Resources. This site is a independent community member project.<br>We hope to offer useful services for the Monero community and project. Which are a encouraging an efficient knowledge management. That is creating synergies for development and is avoiding common inefficiencies of Free Software Projects (duplicative work, knowledge gaps, etc.).</p>
+                <p>The Mission of Monero Community Resources website by xmr.biz is to make a positive difference in every day lives by connecting people to a network of supports and services essential for actively learning, working and living in the community.
+
+Welcome to Monero Community Resources at xmr.biz. This site is a independent community member project.<br>We hope to offer useful services for the Monero community and project. Which are a encouraging an efficient knowledge management. That is creating synergies for development and is avoiding common inefficiencies of Free Software Projects (duplicative work, knowledge gaps, etc.).</p>
                 <h2>Projects</h2>
                
                 <p><b>commons.xmr.biz - Monero Commons Repository</b></p>
