--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <section id="main_content">
                 <h2>About This Site</h2>
                 <p>Our Mission is to enhance the effectiveness of <a href="http://getmonero.org">The Monero Project</a> and its community, by connecting people with the supports and services essential, for efficient learning & researching the project, actively contributing to it or just benefiting the most from, what Monero has to offer.
-<br>We want to help Moneros project knowledge management to be successful, by building infrastructure and ressources, that support the efficient management of information. Our key goal is to create a knowledge sharing culture in the community. That is creating synergies for development and is avoiding common inefficiencies of Free Software Projects (duplicative work, knowledge gaps, etc.).
+<br>We want to help the project knowledge management to be successful, by building infrastructure and ressources, that support the efficient management of information. Our key goal is to create a knowledge sharing culture in the community. That is creating synergies for development and is avoiding common inefficiencies of Free Software Projects (duplicative work, knowledge gaps, etc.).
 </p>
                 <h2>Projects</h2>
                
