--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <section id="main_content">
                 <h2>About This Site</h2>
                 <p>Our Mission is to enhance the effectiveness of <a href="http://getmonero.org">The Monero Project</a> and its community, by connecting people with the supports and services essential, for efficient learning & researching the project, actively contributing to it or just benefiting the most from, what Monero has to offer.
-<br>In such a dynamic working environment like crypto-currencies, knowledge management becomes crucial. To maintain a high performing community, it is important all people have access to the existing knowledge about projects processes. We hope to support Monero, by building infrastructure, that support the efficient management of project knowledge and creates a healthy information-sharing culture in the community, that will give Monero a competitive edge.
+<br>In such a dynamic working environment like crypto-currencies, knowledge management is crucial. To maintain a high performing community, it is important, that all people have access to the existing relevant knowledge. We hope to support Monero community, by building infrastructure, that support the efficient management of project-related knowledge and creates a healthy information-sharing culture, that will give Monero a competitive edge.
 </p>
                 <h2>Projects</h2>
                
@@ -47,7 +47,7 @@ The expression <i>educational</i> is to be understood according to its broad mea
                 <h2>Contact & Authors</h2>
                 <p>Request changes, got a question or want to supply additional informations? Send an email to <a href="mailto:admin@xmr.biz">admin@xmr.biz</a>&nbsp;or find us on <i>#monero-dev</i> on the <a href="https://freenode.net/">Freenode IRC network</a>. We are happy to help you.</p>
                                 <p>
-This site is run by <a href="http://xmr.biz">xmr.biz Networks</a>, a autonomous tech collective of Monero supporters.</p>
+This site is run by <a href="http://xmr.biz">xmr.biz Networks</a>, a autonomous tech collective of Monero supporters.</p><br>
                 
             </section>
         </div>
