--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                
                 <p><b>commons.xmr.biz - Monero Commons Repository</b></p>
                 <p>
-                The aim of  is to provide a media file repository:
-                <a href="http://commons.xmr.biz">Monero Commons</a> is a media repository, that is created and maintained by volunteers. It provides a central archive for freely licensed photographs, diagrams, animations, spoken text, video clips and other media files. 
+                               <a href="http://commons.xmr.biz">Monero Commons</a> is a media repository, that provides a central archive for freely licensed photographs, diagrams, animations, spoken text, video clips and other media files. <br>
 With the intent of building connections and collaboration across developers, projects and stakeholders by making Monero-related media content easily available and acting as common repository.
                  </p>
                
