--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p><b>commons.xmr.biz - Monero Commons Repository</b></p>
                 <p>
                                <a href="http://commons.xmr.biz">Monero Commons</a> is a media repository, that provides a central archive for freely licensed photographs, diagrams, animations, spoken text, video clips and other media files. <br>
-With the intent of building connections and collaboration across developers, projects and stakeholders by making Monero-related media content easily available and acting as common repository.
+With the intention of building connections and collaborations across developers, users and stakeholders by making Monero-related media content easily available and acting as common repository.
                  </p>
                
                
