--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </header>
         <div class="container">
             <section id="main_content">
-                <h2>About This Project</h2>
+                <h2>About</h2>
                 <p>Our Mission is to enhance the effectiveness of <a href="http://getmonero.org">The Monero Project</a> and its community, by connecting people with the supports and services essential, for efficient learning & researching the project, actively contributing to it or just benefiting the most from, what Monero has to offer.
 <br>Because, in such a dynamic working environment like crypto-currencies, knowledge management is crucial. To maintain a high performing community, it is important, that all people have access to the existing relevant knowledge. We hope to support the Monero community, by building infrastructure, that support the efficient management of project-related knowledge and creates a healthy information-sharing culture, that will give Monero a competitive edge.
 </p>
-                <h2>Projects</h2>
+                <h2>Our Projects</h2>
                
                 <p><b>commons.xmr.biz - Monero Commons Repository</b></p>
                 <p>
